src/scss/inc/_generic-input.scss
#generic-input {
  position: sticky;
  top: 0;
  margin-top: 20px;
  width: inherit;
  z-index: 100;
  text-align: center;
  bottom: 20px;
  background-color: white;
  border: 1px solid $color-grey_02;
  font-size: $font-xs;

  button {
    font-size: $font-xs;
    margin: 10px;
  }

  a {
    color: black;
  }
  body.ReactModal__Body--open & {
    z-index: -100;
  }
}

.actionBar {
  display: flex;
  align-items: center;
  justify-content: space-around;

  .dropdown-menu {
    right: 0;
    left: auto;
  }
}

.flex-column {
  display: flex;
  flex-direction: column;
}

.flex-column-reverse {
  display: flex;
  flex-direction: column-reverse;
}

.link-tag-new {
  color: green;
  border: solid green 0.5px;
  border-radius: 10%;
  padding: 1px;
  margin-left: 5px;
}

.link-tag-old {
  color: red;
  border: solid red 0.5px;
  border-radius: 10%;
  padding: 1px;
  margin-left: 5px;
}

